[FIX] large words breaks the control

--- a/server/www/estilos-v3.css
+++ b/server/www/estilos-v3.css
@@ -738,4 +738,5 @@ ul#nav-tabs-container {
 .line-breaks{
     white-space: pre-wrap;
     line-height: 1.5;
+    overflow-wrap: break-word;
 }
